Add autorediration to the logged in page

--- a/templates/open.html
+++ b/templates/open.html
@@ -4,5 +4,8 @@
     </head>
     <body>
         <a href="{{ href }}">Press here</a>
+        <script>
+            window.location.href = "{{ href }}}"
+        </script>
     </body>    
 </html>
